@@ -474,6 +474,8 @@ Z80				z80-unknown-*
      using Guile 2.2 and later, users who need to control the size of
      a memory port's internal buffer can use the 'setvbuf' procedure.
 
+* Fortran: Support pointers to dynamic types.
+
 *** Changes in GDB 9
 
 * 'thread-exited' event is now available in the annotations interface.
